--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
   },
