--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.7.0"
   },
   "browserslist": [
     "last 2 versions"
